# NewRelic-to-Dynatrace-Migration-Utilities

./: .env.example  CHANGELOG.md  CLAUDE-for-NR.md  DECISIONS.md  HISTORY.md  MEMORY.md  README.md  migrate.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/phases/: PHASE-00-done.md  PHASE-01-done.md  PHASE-02-done.md  PHASE-03-done.md  PHASE-04-done.md  PHASE-06-done.md  PHASE-07-done.md  PHASE-08-pending.md  PHASE-09-active.md  PHASE-10-active.md  PHASE-11-done.md  PHASE-12-done.md  PHASE-13-done.md  PHASE-14-done.md  PHASE-15-done.md  PHASE-16-done.md  PHASE-17-done.md  PHASE-18-done.md  PHASE-19-done.md  PHASE-19b-done.md  PHASE-20-done.md  PHASE-21-done.md  PHASE-22-done.md  PHASE-23-done.md  PHASE-24-pending.md  PHASE-25-done.md  PHASE-26-pending.md
.claude/rules/: architecture.md  deployment.md  development.md  gen3-apis.md  python.md  testing.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agents/: __init__.py  base.py  dotnet.py  go_agent.py  java.py  nodejs.py  php.py  python_agent.py  ruby.py
clients/: __init__.py  _http.py  automation_client.py  document_client.py  dynatrace_client.py  newrelic_client.py  settings_v2_client.py
clients/legacy/: __init__.py  config_v1_client.py
compiler/: __init__.py  ast_nodes.py  compiler.py  emitter.py  lexer.py  parser.py  shorthands.py  tokens.py
config/: __init__.py  project_links.py  settings.py
docs/: COVERAGE.md  architecture.md  gen2-only-capabilities.md  migration-coverage.md  migration-guide.md  migration-research.md  nrql-engine-sync-audit.md  out-of-scope.md  quickstart.md  token-scopes.md  validation.md
examples/: example_queries.nrql  sample_nr_export.json
exporters/: __init__.py  monaco.py  terraform.py
exporters/legacy/: __init__.py  terraform_v1.py
migration/: __init__.py  audit.py  canary.py  diff.py  report.py  retry.py  state.py
newrelic-to-dynatrace-migration/: README.md  migrate.py  pyproject.toml
newrelic-to-dynatrace-migration/.claude/: CLAUDE.md
newrelic-to-dynatrace-migration/.claude/phases/: PHASE-00-pending.md  PHASE-01-pending.md  PHASE-02-pending.md  PHASE-04-pending.md  PHASE-05-done.md  PHASE-05-pending.md  PHASE-06-pending.md
newrelic-to-dynatrace-migration/.claude/rules/: architecture.md  dql-reference.md  testing.md
newrelic-to-dynatrace-migration/clients/: dynatrace_client.py
newrelic-to-dynatrace-migration/compiler/: emitter.py  lexer.py  parser.py
newrelic-to-dynatrace-migration/config/: settings.py
newrelic-to-dynatrace-migration/migration/: __init__.py
newrelic-to-dynatrace-migration/registry/: slo_auditor.py
newrelic-to-dynatrace-migration/tests/unit/: test_auth.py  test_cli.py  test_compiler.py  (+12 more)
newrelic-to-dynatrace-migration/transformers/: __init__.py  dashboard_transformer.py  nrql_converter.py  nrql_mapping_rules.py
newrelic-to-dynatrace-migration/validators/: __init__.py  dql_validator.py
registry/: __init__.py  environment.py  slo_auditor.py
scripts/: fetch_dt_schemas.py
tests/: conftest.py
tests/integration/: conftest.py  test_compile_roundtrip.py  test_dt_client_live.py  test_iac_validates.py  test_nr_client_live.py  test_schema_validation.py
tests/legacy/: test_drop_rule_transformer_v1.py  test_dynatrace_client_v1.py  test_infrastructure_transformer_v1.py  test_log_parsing_transformer_v1.py  test_monaco_exporter_v1.py  test_tag_transformer_v1.py  test_terraform_exporter_v1.py  test_transformers_v1.py
tests/unit/: test_auth.py  test_cli.py  test_compiler.py  test_converters.py  test_diff.py  test_dql_fixer.py  test_dql_validator.py  test_drop_rule_transformer.py  test_dynatrace_client.py  test_extract_nrql.py  test_incremental_migration.py  test_infrastructure_transformer.py  test_invariants.py  test_legacy_flag.py  test_log_parsing_transformer.py  test_mapping_rules.py  test_migration_state.py  test_monaco_exporter.py  test_newrelic_client.py  test_nrql_mapping_rules.py  test_phase16_modules.py  test_phase17_modules.py  test_phase18_modules.py  test_phase19_modules.py  test_phase19b_engine_parity.py  test_phase20_modules.py  test_phase23_modules.py  test_phase24_modules.py  test_phase25_modules.py  test_registry.py  test_report.py  test_retry.py  test_settings.py  test_tag_transformer.py  test_terraform_exporter.py  test_third_pass_parity.py  test_transformers.py  test_utils_and_config.py  test_utils_validators.py
tools/: __init__.py  nrdb_archive.py
transformers/: __init__.py  _detector_utils.py  _workflow_utils.py  ai_monitoring_transformer.py  aiops_transformer.py  alert_transformer.py  baseline_alert_transformer.py  browser_rum_transformer.py  change_tracking_transformer.py  cloud_integration_transformer.py  cloudwatch_metric_streams_transformer.py  converters.py  custom_entity_transformer.py  custom_event_ingest_transformer.py  custom_instrumentation_translator.py  dashboard_transformer.py  database_monitoring_transformer.py  drop_rule_transformer.py  identity_transformer.py  infrastructure_transformer.py  key_transaction_transformer.py  kubernetes_transformer.py  lambda_transformer.py  log_archive_transformer.py  log_obfuscation_transformer.py  log_parsing_transformer.py  lookup_table_transformer.py  maintenance_window_transformer.py  mapping_rules.py  metric_normalization_transformer.py  metric_transform.py  mobile_rum_transformer.py  non_nrql_alert_transformer.py  npm_transformer.py  nrql_converter.py  nrql_mapping_rules.py  on_host_integration_transformer.py  otel_collector_transformer.py  otel_metrics_transformer.py  prometheus_transformer.py  (+9 more)
transformers/legacy/: __init__.py  alert_transformer_v1.py  dashboard_transformer_v1.py  drop_rule_transformer_v1.py  error_inbox_v1.py  infrastructure_transformer_v1.py  log_parsing_transformer_v1.py  request_naming_v1.py  slo_transformer_v1.py  synthetic_transformer_v1.py
transformers/mappings/: __init__.py  aggregations.py  attributes.py  event_types.py  metric_transforms.py  metrics.py  visualizations.py
utils/: __init__.py  auth.py  error_taxonomy.py  logger.py  validators.py
validators/: dql_fixer.py
