[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newrelic-to-dynatrace-migration"
version = "1.3.0"
description = "Migration framework for converting New Relic monitoring configurations to Dynatrace"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
nr-migrate = "migrate:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["integration: marks tests as integration (deselect with '-m not integration')"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long
    "E701",   # multiple statements on one line (colon) — used in compact enum/parser code
    "E702",   # multiple statements on one line (semicolon) — used in compact enum/parser code
    "E731",   # lambda assignment — used in emitter for brevity
    "F601",   # duplicate dict key — intentional overrides in field maps
    "E741",   # ambiguous variable name — short vars in list comprehensions
    "F841",   # unused local variable — captured for readability in complex parsing
    "E402",   # import not at top — structlog must configure before project imports
    "F402",   # import shadowed by loop variable — harmless in context
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

# Modules not yet under strict checking — silence errors from followed imports
[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "registry.*",
    "clients.*",
    "exporters.*",
    "utils.*",
    "migrate",
]
ignore_errors = true

[tool.coverage.run]
omit = [
    "tests/*",
    "examples/*",
    "transformers/nrql_converter.py",  # 4000-line post-processing wrapper; core logic tested via compiler/ (100% cov)
    "migrate.py",  # CLI orchestrator/glue code; tested via CliRunner in test_cli.py
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
include = ["compiler*", "clients*", "config*", "transformers*", "validators*", "utils*", "registry*", "migration*", "exporters*"]
